<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/create_event_bg">

    <TextView
        android:id="@+id/textView"
        android:layout_width="282dp"
        android:layout_height="0dp"
        android:layout_marginTop="44dp"
        android:text="Your Profile"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="9dp"
        android:clickable="true"
        android:src="@drawable/baseline_camera_alt_24"
        app:civ_border_color="#ffffff"
        app:civ_border_width="1dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <android.widget.Button
        android:id="@+id/changePhoto"
        android:layout_width="156dp"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#910A67"
        android:password="false"
        android:text="Change Photo"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/removePhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

    <android.widget.Button
        android:id="@+id/removePhoto"
        android:layout_width="149dp"
        android:layout_height="26dp"
        android:layout_gravity="center_horizontal"
        android:background="#910A67"
        android:text="Remove Photo"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePhoto" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:hint="Name"
        android:inputType="textPersonName"
        android:text="Name"
        android:textColor="@android:color/black"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/edit_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removePhoto" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="Phone Number"
        android:inputType="phone"
        android:text="Phone Number"
        android:textColor="@android:color/black"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_address" />

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:text='Email'
        android:textColor="@android:color/black"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/edit_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="Receive Notifications"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <android.widget.Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="33dp"
            android:background="@drawable/button_bg"
            android:text="Save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/switch_org"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.widget.Button
            android:id="@+id/switch_org"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_bg"
            android:text="Organizer Mode"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>