<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <LinearLayout
            android:id="@+id/linearLayout11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="126dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="48dp"
                android:baselineAligned="false"
                android:text="Complete"
                android:textColor="@android:color/darker_gray"
                android:textSize="24sp" />

            <!-- Profile Picture -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:text="Your Profile"
                android:textColor="@android:color/white"
                android:textFontWeight="400"
                android:textSize="48sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="126dp"
            android:background="@drawable/rounded_white_background"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout11">

            <!-- Name Input -->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/addProfileImage"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_centerInParent="true"
                android:layout_marginStart="9dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="9dp"
                android:clickable="true"
                android:src="@drawable/baseline_person_24"
                app:civ_border_color="#000000"
                app:civ_border_width="1dp" />

            <EditText
                android:id="@+id/add_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:hint="Name"
                android:inputType="textPersonName"
                android:textColor="@android:color/black"
                android:textColorHint="#80000000" />

            <!-- Email Input -->
            <EditText
                android:id="@+id/add_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textColorHint="#80000000" />

            <!-- Phone Number Input -->
            <EditText
                android:id="@+id/add_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:hint="Phone Number"
                android:inputType="phone"
                android:textColor="@android:color/black"
                android:textColorHint="#80000000" />


            <!-- Save Button -->
            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="56dp"
                android:text="Sign up"
                android:textColor="@android:color/white"
                android:textSize="24dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
