<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    android:padding="16dp">


    <TextView
        android:id="@+id/eventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="Music Rooftop Session"
        android:textColor="#FFFFFF"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/eventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="March 9, 7:00 PM"
        android:textColor="#E0E0E0"
        android:textSize="20sp" />


    <ExpandableListView
        android:id="@+id/entrantsExpandableList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp"
        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
        android:padding="8dp" />

    <Button
        android:id="@+id/poolButton"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_bg"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="Pool"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <Button
        android:id="@+id/QRButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Show QR Code"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_gradient"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/MapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_gradient"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="Generate Map"
        android:textColor="#FFFFFF" />


</LinearLayout>