...
        android:title="Home" />
    <item
        android:id="@+id/navigation_scanner"
        android:icon="@drawable/baseline_qr_code_scanner_24"
        android:title="QR Scanner" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="Profile" />
</menu>
